// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInput component should render file type correctly 1`] = `
<DocumentFragment>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
    >
      Label
    </label>
    <input
      class="form-control"
      placeholder="Placeholder"
      type="file"
    />
    <small
      class="form-text"
    >
      value
    </small>
  </div>
</DocumentFragment>
`;

exports[`FormInput component should render text type correctly 1`] = `
<DocumentFragment>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
    >
      Label
    </label>
    <input
      class="form-control"
      placeholder="Placeholder"
      type="text"
      value="value"
    />
  </div>
</DocumentFragment>
`;

exports[`FormInput component should render textarea type correctly 1`] = `
<DocumentFragment>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
    >
      Label
    </label>
    <textarea
      class="form-control"
      placeholder="Placeholder"
    >
      value
    </textarea>
  </div>
</DocumentFragment>
`;
